--- a/incognito/storyboard/Base.lproj/Main.storyboard
+++ b/incognito/storyboard/Base.lproj/Main.storyboard
@@ -1261,9 +1261,9 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yAM-cf-qFo">
-                                                    <rect key="frame" x="15" y="31" width="50" height="25"/>
+                                                    <rect key="frame" x="15" y="31" width="100" height="25"/>
                                                     <constraints>
-                                                        <constraint firstAttribute="width" constant="50" id="fbD-8K-sy8"/>
+                                                        <constraint firstAttribute="width" constant="100" id="fbD-8K-sy8"/>
                                                         <constraint firstAttribute="height" constant="25" id="wlh-oH-j5R"/>
                                                     </constraints>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
@@ -1271,14 +1271,14 @@
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Qea-xn-u6I">
-                                                    <rect key="frame" x="75" y="0.0" width="205" height="142"/>
+                                                    <rect key="frame" x="125" y="0.0" width="205" height="142"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="142" id="gST-ds-kFt"/>
                                                         <constraint firstAttribute="width" constant="205" id="xZY-KY-vhj"/>
                                                     </constraints>
                                                 </imageView>
                                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hF2-S1-9RW">
-                                                    <rect key="frame" x="300" y="10" width="30" height="30"/>
+                                                    <rect key="frame" x="350" y="10" width="30" height="30"/>
                                                     <accessibility key="accessibilityConfiguration">
                                                         <accessibilityTraits key="traits" button="YES" image="YES"/>
                                                     </accessibility>
@@ -1290,7 +1290,7 @@
                                                 </button>
                                             </subviews>
                                             <constraints>
-                                                <constraint firstItem="Qea-xn-u6I" firstAttribute="leading" secondItem="yAM-cf-qFo" secondAttribute="trailing" constant="10" id="M5P-cy-Dr0"/>
+                                                <constraint firstItem="Qea-xn-u6I" firstAttribute="leading" secondItem="yAM-cf-qFo" secondAttribute="trailing" constant="10" id="OJn-5W-NCc"/>
                                                 <constraint firstItem="yAM-cf-qFo" firstAttribute="top" secondItem="AFN-mt-dfS" secondAttribute="topMargin" constant="20" id="iWo-Je-aRx"/>
                                                 <constraint firstItem="hF2-S1-9RW" firstAttribute="top" secondItem="AFN-mt-dfS" secondAttribute="top" constant="10" id="maz-LG-r7K"/>
                                                 <constraint firstItem="yAM-cf-qFo" firstAttribute="leading" secondItem="AFN-mt-dfS" secondAttribute="leadingMargin" id="oZ3-aV-XWl"/>
