--- a/incognito/storyboard/Base.lproj/Main.storyboard
+++ b/incognito/storyboard/Base.lproj/Main.storyboard
@@ -1270,36 +1270,39 @@
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Qea-xn-u6I">
-                                                    <rect key="frame" x="125" y="0.0" width="205" height="142"/>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Qea-xn-u6I">
+                                                    <rect key="frame" x="125" y="0.0" width="205" height="108"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="142" id="gST-ds-kFt"/>
                                                         <constraint firstAttribute="width" constant="205" id="xZY-KY-vhj"/>
                                                     </constraints>
                                                 </imageView>
-                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hF2-S1-9RW">
-                                                    <rect key="frame" x="350" y="10" width="30" height="30"/>
-                                                    <accessibility key="accessibilityConfiguration">
-                                                        <accessibilityTraits key="traits" button="YES" image="YES"/>
-                                                    </accessibility>
-                                                    <constraints>
-                                                        <constraint firstAttribute="height" constant="30" id="55s-OK-8xM"/>
-                                                        <constraint firstAttribute="width" constant="30" id="kUs-ZS-QKj"/>
-                                                    </constraints>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ycg-2n-re9">
+                                                    <rect key="frame" x="125" y="121" width="205" height="21"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5XG-fA-ras">
+                                                    <rect key="frame" x="337" y="11" width="30" height="30"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                     <state key="normal" image="icons8-close-window-30"/>
+                                                    <connections>
+                                                        <action selector="DeletePost:" destination="Ceb-FG-W5m" eventType="touchUpInside" id="5Yw-rM-BUh"/>
+                                                    </connections>
                                                 </button>
                                             </subviews>
                                             <constraints>
                                                 <constraint firstItem="Qea-xn-u6I" firstAttribute="leading" secondItem="yAM-cf-qFo" secondAttribute="trailing" constant="10" id="OJn-5W-NCc"/>
                                                 <constraint firstItem="yAM-cf-qFo" firstAttribute="top" secondItem="AFN-mt-dfS" secondAttribute="topMargin" constant="20" id="iWo-Je-aRx"/>
-                                                <constraint firstItem="hF2-S1-9RW" firstAttribute="top" secondItem="AFN-mt-dfS" secondAttribute="top" constant="10" id="maz-LG-r7K"/>
                                                 <constraint firstItem="yAM-cf-qFo" firstAttribute="leading" secondItem="AFN-mt-dfS" secondAttribute="leadingMargin" id="oZ3-aV-XWl"/>
-                                                <constraint firstItem="hF2-S1-9RW" firstAttribute="leading" secondItem="Qea-xn-u6I" secondAttribute="trailing" constant="20" id="wUQ-aL-hAc"/>
                                                 <constraint firstItem="Qea-xn-u6I" firstAttribute="top" secondItem="AFN-mt-dfS" secondAttribute="top" id="xCY-MC-rPc"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                         <connections>
                                             <outlet property="postImage" destination="Qea-xn-u6I" id="sXg-ym-NU1"/>
+                                            <outlet property="postText" destination="Ycg-2n-re9" id="nu5-V9-dJH"/>
                                             <outlet property="postTimeLabel" destination="yAM-cf-qFo" id="C1o-NF-0iI"/>
                                         </connections>
                                     </tableViewCell>
