--- a/incognito/storyboard/Base.lproj/Main.storyboard
+++ b/incognito/storyboard/Base.lproj/Main.storyboard
@@ -773,13 +773,13 @@
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <button opaque="NO" contentMode="scaleAspectFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" adjustsImageWhenHighlighted="NO" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="MJ3-8k-5Bk">
-                                            <rect key="frame" x="27" y="335" width="17" height="22"/>
+                                        <button opaque="NO" contentMode="scaleAspectFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" adjustsImageSizeForAccessibilityContentSizeCategory="YES" adjustsImageWhenHighlighted="NO" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="MJ3-8k-5Bk">
+                                            <rect key="frame" x="27" y="323" width="17" height="34"/>
                                             <constraints>
                                                 <constraint firstAttribute="width" constant="17" id="Ocg-mt-swb"/>
                                             </constraints>
                                             <color key="tintColor" red="1" green="0.14913141730000001" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                            <state key="normal" title="12" image="like_icon"/>
+                                            <state key="normal" title="12"/>
                                             <connections>
                                                 <action selector="DidPressLike:" destination="zbA-xl-Pqr" eventType="touchUpInside" id="gG2-Ff-nsT"/>
                                             </connections>
@@ -825,7 +825,7 @@
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="d93-U5-dsw">
-                                            <rect key="frame" x="16" y="126" width="331" height="193"/>
+                                            <rect key="frame" x="16" y="126" width="331" height="181"/>
                                         </imageView>
                                     </subviews>
                                     <constraints>
@@ -1023,6 +1023,10 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <imageView userInteractionEnabled="NO" alpha="0.65000000000000002" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="BG_profile" translatesAutoresizingMaskIntoConstraints="NO" id="95N-Kg-H2b">
+                                <rect key="frame" x="0.0" y="28" width="375" height="546"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OW5-Q7-J0z">
                                 <rect key="frame" x="137" y="354" width="0.0" height="0.0"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -1044,7 +1048,7 @@
                                 </connections>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Settings" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Q2g-lH-jwO">
-                                <rect key="frame" x="156" y="28" width="64" height="21"/>
+                                <rect key="frame" x="155.5" y="28" width="64" height="21"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" name="alternateSelectedControlTextColor" catalog="System" colorSpace="catalog"/>
@@ -1057,14 +1061,6 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4nJ-oc-zOA">
-                                <rect key="frame" x="161" y="528" width="52" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="Log out"/>
-                                <connections>
-                                    <action selector="Logout:" destination="eX6-F2-bzV" eventType="touchUpInside" id="Onp-K3-4j2"/>
-                                </connections>
-                            </button>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="Rectangle9" translatesAutoresizingMaskIntoConstraints="NO" id="oDD-w0-l01">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -1197,6 +1193,20 @@
                                     <action selector="ShowOldPwd:" destination="eX6-F2-bzV" eventType="touchUpInside" id="1xv-lR-LoB"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4nJ-oc-zOA">
+                                <rect key="frame" x="13" y="497" width="349" height="70"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" image="Sign Out"/>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="boolean" keyPath="layer.masksToBounds" value="YES"/>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                        <integer key="value" value="10"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
+                                <connections>
+                                    <action selector="Logout:" destination="eX6-F2-bzV" eventType="touchUpInside" id="Onp-K3-4j2"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" red="0.93725490199999995" green="0.93725490199999995" blue="0.95686274510000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <gestureRecognizers/>
@@ -1284,15 +1294,15 @@
                                     <constraint firstAttribute="height" constant="350" id="lt3-VM-odm"/>
                                 </constraints>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" restorationIdentifier="postCell" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="postCell" rowHeight="209" id="Ceb-FG-W5m" customClass="PorfilePostTableViewCell" customModule="incognito" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="28" width="375" height="209"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" restorationIdentifier="postCell" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="postCell" rowHeight="365" id="Ceb-FG-W5m" customClass="PorfilePostTableViewCell" customModule="incognito" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="375" height="365"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" restorationIdentifier="postsCell" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Ceb-FG-W5m" id="AFN-mt-dfS">
-                                            <rect key="frame" x="0.0" y="0.0" width="375" height="208.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="364.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yAM-cf-qFo">
-                                                    <rect key="frame" x="12" y="22" width="61" height="66"/>
+                                                    <rect key="frame" x="12" y="41" width="61" height="141"/>
                                                     <constraints>
                                                         <constraint firstAttribute="width" constant="61" id="Yjt-aB-4Y3"/>
                                                     </constraints>
@@ -1308,28 +1318,28 @@
                                                     </connections>
                                                 </button>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ycg-2n-re9">
-                                                    <rect key="frame" x="81" y="22" width="252" height="42"/>
+                                                    <rect key="frame" x="81" y="41" width="270" height="42"/>
                                                     <constraints>
-                                                        <constraint firstAttribute="width" constant="252" id="qGo-fz-FkD"/>
+                                                        <constraint firstAttribute="width" constant="270" id="qGo-fz-FkD"/>
                                                         <constraint firstAttribute="height" constant="42" id="wll-ER-NSh"/>
                                                     </constraints>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Qea-xn-u6I">
-                                                    <rect key="frame" x="97" y="69" width="221" height="129"/>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Qea-xn-u6I">
+                                                    <rect key="frame" x="81" y="103" width="270" height="200"/>
                                                 </imageView>
                                             </subviews>
                                             <constraints>
                                                 <constraint firstItem="5XG-fA-ras" firstAttribute="top" secondItem="AFN-mt-dfS" secondAttribute="topMargin" constant="-60" id="4Ec-qA-kwt"/>
-                                                <constraint firstAttribute="trailingMargin" secondItem="Qea-xn-u6I" secondAttribute="trailing" constant="42" id="O0O-Z2-q8q"/>
-                                                <constraint firstAttribute="bottomMargin" secondItem="yAM-cf-qFo" secondAttribute="bottom" constant="110" id="PNH-EN-CUI"/>
-                                                <constraint firstItem="yAM-cf-qFo" firstAttribute="top" secondItem="AFN-mt-dfS" secondAttribute="topMargin" constant="11" id="UIe-YA-uHb"/>
-                                                <constraint firstItem="Qea-xn-u6I" firstAttribute="top" secondItem="AFN-mt-dfS" secondAttribute="top" constant="69" id="ali-hF-f5J"/>
-                                                <constraint firstItem="Qea-xn-u6I" firstAttribute="bottom" secondItem="AFN-mt-dfS" secondAttribute="bottomMargin" id="aqK-wb-hso"/>
-                                                <constraint firstAttribute="bottomMargin" secondItem="Ycg-2n-re9" secondAttribute="bottom" constant="134" id="eJY-Bl-dcz"/>
-                                                <constraint firstItem="Qea-xn-u6I" firstAttribute="leading" secondItem="yAM-cf-qFo" secondAttribute="trailing" constant="24" id="gWv-QJ-Hpr"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="Qea-xn-u6I" secondAttribute="trailing" constant="9" id="O0O-Z2-q8q"/>
+                                                <constraint firstAttribute="bottomMargin" secondItem="yAM-cf-qFo" secondAttribute="bottom" constant="172" id="PNH-EN-CUI"/>
+                                                <constraint firstItem="yAM-cf-qFo" firstAttribute="top" secondItem="AFN-mt-dfS" secondAttribute="topMargin" constant="30" id="UIe-YA-uHb"/>
+                                                <constraint firstItem="Qea-xn-u6I" firstAttribute="top" secondItem="AFN-mt-dfS" secondAttribute="top" constant="103" id="ali-hF-f5J"/>
+                                                <constraint firstItem="Qea-xn-u6I" firstAttribute="bottom" secondItem="AFN-mt-dfS" secondAttribute="bottomMargin" constant="-51" id="aqK-wb-hso"/>
+                                                <constraint firstAttribute="bottomMargin" secondItem="Ycg-2n-re9" secondAttribute="bottom" constant="271" id="eJY-Bl-dcz"/>
+                                                <constraint firstItem="Qea-xn-u6I" firstAttribute="leading" secondItem="yAM-cf-qFo" secondAttribute="trailing" constant="8" id="gWv-QJ-Hpr"/>
                                                 <constraint firstItem="yAM-cf-qFo" firstAttribute="leading" secondItem="AFN-mt-dfS" secondAttribute="leadingMargin" constant="-3" id="jNS-rv-mUK"/>
                                                 <constraint firstItem="Ycg-2n-re9" firstAttribute="leading" secondItem="yAM-cf-qFo" secondAttribute="trailing" constant="8" symbolic="YES" id="yVF-HH-xbi"/>
                                                 <constraint firstAttribute="trailingMargin" secondItem="5XG-fA-ras" secondAttribute="trailing" constant="-10" id="zYm-uL-hk6"/>
@@ -1343,7 +1353,7 @@
                                         </connections>
                                     </tableViewCell>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" restorationIdentifier="commentsCell" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="commentCell" rowHeight="160" id="Ya2-0K-BUS" customClass="CommentsCell" customModule="incognito" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="237" width="375" height="160"/>
+                                        <rect key="frame" x="0.0" y="393" width="375" height="160"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" restorationIdentifier="youCommentsCell" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Ya2-0K-BUS" id="yfL-hM-yMP">
                                             <rect key="frame" x="0.0" y="0.0" width="375" height="159.5"/>
@@ -1486,6 +1496,7 @@
     </scenes>
     <resources>
         <image name="BG" width="375" height="328"/>
+        <image name="BG_profile" width="374" height="250"/>
         <image name="Discover and Share y" width="200" height="13"/>
         <image name="Group 3" width="63" height="64"/>
         <image name="Login buttn-1" width="295" height="48"/>
@@ -1493,6 +1504,7 @@
         <image name="Rectangle 2" width="327" height="350"/>
         <image name="Rectangle 6" width="280" height="52"/>
         <image name="Rectangle9" width="375" height="44"/>
+        <image name="Sign Out" width="375" height="70"/>
         <image name="Sign Up" width="84" height="24"/>
         <image name="Sign in with Usernam" width="239" height="24"/>
         <image name="add_location" width="20" height="24"/>
@@ -1506,7 +1518,6 @@
         <image name="icons8-home-30" width="30" height="30"/>
         <image name="icons8-plus-math-30" width="30" height="30"/>
         <image name="icons8-settings-30" width="30" height="30"/>
-        <image name="like_icon" width="15" height="15"/>
         <image name="stroke" width="10" height="20"/>
         <image name="wallpaper" width="640" height="1136"/>
     </resources>
